--- a/style.css
+++ b/style.css
@@ -4,14 +4,17 @@ body {
 }
 
 p {
-font-size: 200%;
+font-size: 150%;
 }
 
 .crawltext {
- font-size: 1%;
+ font-size: 150%;
+ font-family: 'Roboto', sans-serif;
+ color:rgb(250,215,77);
+ background-color: rgb (0,0,0);
 }
 
 #partthree {
- font-size: 600%;
+ font-size: 151%;
  color: black;
 }
