--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
- background-color: cyan;
- color: coral;
+ color: rgb(250,215,77);
+ background-color: rgb(0,0,0);
 }
 
 p {
@@ -10,11 +10,7 @@ font-size: 150%;
 .crawltext {
  font-size: 150%;
  font-family: 'Roboto', sans-serif;
- color:rgb(250,215,77);
- background-color: rgb (0,0,0);
 }
 
-#partthree {
- font-size: 151%;
- color: black;
+#partthree {color: rgb(150,43,96)
 }
